--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
   <link rel="icon" href="images/devchallenges.png" />
 
+  <!-- CSS Link -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+  <!-- Google Fonts Link -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
@@ -19,10 +21,11 @@
 
 <body>
 
-
   <h1>Checkout</h1>
 
+  <!-- Main Section -->
   <main class="l-container">
+    <!-- Form Container -->
     <div class="l-container__item1">
       <h2>Contact information</h2>
 
@@ -48,7 +51,7 @@
           <div class="item1__country">
             <label class="item1__label" for="country">Country</label>
             <select class="item1__text-input text-input--short" name="country" id="country" required>
-              <option class="default-country" value="country">Your country..</option>
+              <option disabled class="default-country" value="" selected>Your country..</option>
               <option value="USA">USA</option>
               <option value="India">India</option>
               <option value="Cuba">Cuba</option>
@@ -63,7 +66,7 @@
 
         </div>
 
-        <input type="checkbox" id="save-info" required>
+        <input type="checkbox" id="save-info">
         <label for="save-info" class="item1__label label__checkbox">Save this information for next time</label>
 
         <button class="item1__btn btn" type="submit" name="button">Continue</button>
@@ -71,6 +74,7 @@
       </form>
     </div>
 
+    <!-- Products Container -->
     <div class="l-container__item2">
       <div class="item2__wrapper">
         <div class="item2__product">
@@ -79,12 +83,12 @@
           </div>
           <div class="item2__content__wrapper">
             <p class="item2__product-name">Vintage Backbag</p>
-            <span class="item2__product-price">$54.99</span>
+            <span class="item2__product-price">$<span class="item-price">54.99</span></span>
             <span class="item2__product-price--cancelled">$94.99</span>
             <div class="item2__product__quantity">
-              <button class="btn__quantity" type="button" name="increment">-</button>
-              <span class="btn__quantity__text">1</span>
-              <button class="btn__quantity" type="button" name="decrement">+</button>
+              <button class="btn__quantity btn--dec" type="button" name="increment">-</button>
+              <span class="btn__quantity__text quantity1">1</span>
+              <button class="btn__quantity btn--inc" type="button" name="decrement">+</button>
             </div>
           </div>
         </div>
@@ -95,12 +99,12 @@
           </div>
           <div class="item2__content__wrapper">
             <p class="item2__product-name">Levi Shoes</p>
-            <span class="item2__product-price">$74.99</span>
+            <span class="item2__product-price">$<span class="item-price">74.99</span></span>
             <span class="item2__product-price--cancelled">$124.99</span>
             <div class="item2__product__quantity">
-              <button class="btn__quantity" type="button" name="increment">-</button>
-              <span class="btn__quantity__text">1</span>
-              <button class="btn__quantity" type="button" name="decrement">+</button>
+              <button class="btn__quantity btn--dec" type="button" name="increment">-</button>
+              <span class="btn__quantity__text quantity2">1</span>
+              <button class="btn__quantity btn--inc" type="button" name="decrement">+</button>
             </div>
           </div>
         </div>
@@ -114,20 +118,22 @@
           <hr>
           <div class="item2__price item2__price--low">
             <p class="price__text">Total</p>
-            <p class="price__dollar">$148.98</p>
+            <p class="price__dollar">$<span id="total-price">148.98</span></p>
           </div>
         </div>
       </div>
-
 
     </div>
 
   </main>
 
+  <!-- Footer Section -->
   <footer class="l-footer">
     <p class="l-footer__text">Ashwin Sasikumar @ DevChallenges.io</p>
   </footer>
 
+  <!-- Javascript -->
+  <script src="index.js" charset="utf-8"></script>
 
 </body>
 
